2011-12-04 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* configure: Bumped version to 1.3.2
	* configure.in:
	* scripts/vfs.tcl:
	* scripts/pages.tcl:
	* scripts/fsindex.tcl:
	* scripts/optimize.tcl:
	* scripts/memchan.tcl:
	* scripts/cookvfs.tcl:
	* scripts/readerchannel.tcl:
	* scripts/writer.tcl:
	* pkgconfig.tcl.in:
	* doc/cookfs_pages.n:
	* doc/cookfs_fsindex.n:
	* doc/cookfs.n:
	* doc/cookfs_pages.html:
	* doc/cookfs_fsindex.html:
	* doc/cookfs.html:
	* doc/cookfs_pages.man:
	* doc/cookfs_fsindex.man:
	* doc/cookfs.man:

2011-11-29 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/pages.tcl: Fix for bug in pure Tcl and Tcl 8.4 on Windows

2011-11-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/vfs.tcl: Fix delete operation working properly for pure Tcl and C implementations
	* tests/vfs.test:

2011-11-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/fsindex.tcl: Fix for utime command handling in pure Tcl version
	* tests/fsindex.test:
	* scripts/vfs.tcl:

Release 1.3.1

2011-09-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* configure: Bumped version to 1.3.1
	* configure.in:
	* pkgconfig.tcl.in:
	* scripts/vfs.tcl:
	* scripts/pages.tcl:
	* scripts/fsindex.tcl:
	* scripts/optimize.tcl:
	* scripts/memchan.tcl:
	* scripts/cookvfs.tcl:
	* scripts/readerchannel.tcl:
	* scripts/writer.tcl:
	* doc/cookfs_pages.n:
	* doc/cookfs_fsindex.n:
	* doc/cookfs.n:
	* doc/cookfs_pages.html:
	* doc/cookfs_fsindex.html:
	* doc/cookfs.html:
	* doc/cookfs_pages.man:
	* doc/cookfs_fsindex.man:
	* doc/cookfs.man:

2011-09-21 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/readerchannel.c: Fixed issue with [load] command not working properly with C-based readerchannel
	* generic/readerchannelIO.c:
	* generic/readerchannelIO.h:
	* scripts/vfs.tcl:

2011-09-13 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Rework of C code after feedback from Andreas Kupries regarding compiling on various platforms